--- a/public/css/jhfurniture.css
+++ b/public/css/jhfurniture.css
@@ -14,3 +14,15 @@ footer {
     width: 100%;
     height: 100px;
 }
+
+.column {
+    float: left;
+    width: 50%;
+  }
+
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
